add registration and onboarding
