# app/Http/Requests/Api/User/OnboardingRequest.php
@@ -4,7 +4,7 @@ namespace App\Http\Requests\Api\User;
 
 use App\Http\Requests\Api\ApiRequest;
 
-class RegisterRequest extends ApiRequest
+class OnboardingRequest extends ApiRequest
 {
     /**
      * Get the validation rules that apply to the request.
@@ -15,8 +15,8 @@ class RegisterRequest extends ApiRequest
     {
         return [
             'phone' => ['required', 'digits:11'],
-            'onboarding_id' => ['required', 'integer', 'exists:onboarding_users,id'],
-            'phone_code' => ['required', 'digits:6'],
+            'name' => ['nullable', 'string'],
+            'password' => ['required'],
         ];
     }
 }
