# storage/api-docs/api-docs.json
@@ -6,13 +6,67 @@
     },
     "paths": {
         "/api/": {},
+        "/api/v1/register": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Регистрация юзера",
+                "operationId": "c01deea8cbf7025911d48f918fe7dcc8",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "phone": {
+                                        "type": "string",
+                                        "example": "79161234567"
+                                    },
+                                    "onboarding_id": {
+                                        "type": "integer",
+                                        "example": 23989484565138245
+                                    },
+                                    "phone_code": {
+                                        "type": "integer",
+                                        "example": 123456
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "access_token": {
+                                            "type": "string",
+                                            "example": "3|OTdZhC1hXyYKSb8GasjSazFjak2RyN0G6rdDXQ4o2cffbd2f"
+                                        },
+                                        "refresh_token": {
+                                            "type": "string",
+                                            "example": "4|OTdZhC1hXyYKSb8GasjSazFjak2RyN0G6rdDXQ4o2cffbd2f"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/login": {
             "post": {
                 "tags": [
                     "User"
                 ],
                 "summary": "Логин юзера",
-                "operationId": "a7c6d0e80cca08ce8e2dd4a8a393ab0a",
+                "operationId": "5b91f642cef6edcd2b08568151f68e39",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -56,13 +110,13 @@
                 }
             }
         },
-        "/api/v1/register": {
+        "/api/v1/onboarding": {
             "post": {
                 "tags": [
                     "User"
                 ],
-                "summary": "Регистрация юзера",
-                "operationId": "2aeeb1635ddc5c62794513e63b3feeb3",
+                "summary": "Онбординг юзера",
+                "operationId": "e536133def002089c66528805af5850b",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -93,13 +147,72 @@
                             "application/json": {
                                 "schema": {
                                     "properties": {
+                                        "user": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "string",
+                                                    "example": "15735744919122398"
+                                                },
+                                                "name": {
+                                                    "type": "string",
+                                                    "example": "Some name"
+                                                },
+                                                "phone": {
+                                                    "type": "string",
+                                                    "example": "79161234567"
+                                                },
+                                                "role": {
+                                                    "type": "string",
+                                                    "example": "client"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/refresh-token": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Обновление токенов юзера",
+                "operationId": "365e1dd513ef50a1350da7fbc320ea76",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "refresh_token": {
+                                        "type": "string",
+                                        "example": "5|OTdZhC1hXyYKSb8GasjSazFjak2RyN0G6rdDXQ4o2cffbd2f"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
                                         "access_token": {
                                             "type": "string",
-                                            "example": "3|OTdZhC1hXyYKSb8GasjSazFjak2RyN0G6rdDXQ4o2cffbd2f"
+                                            "example": "7|OTdZhC1hXyYKSb8GasjSazFjak2RyN0G6rdDXQ4o2cffbd2f"
                                         },
                                         "refresh_token": {
                                             "type": "string",
-                                            "example": "4|OTdZhC1hXyYKSb8GasjSazFjak2RyN0G6rdDXQ4o2cffbd2f"
+                                            "example": "8|OTdZhC1hXyYKSb8GasjSazFjak2RyN0G6rdDXQ4o2cffbd2f"
                                         }
                                     },
                                     "type": "object"
